--- a/src/views/chat.html
+++ b/src/views/chat.html
@@ -7,13 +7,13 @@
 </head>
 <body>
     <article class="chat-modal">
-        <div class="chat-header">
-            <div class="avatar">
+        <div class="chat__header">
+            <div class="chat__header__avatar">
                 <img src="/team-4/src/public/avatar.jpg" class="image">
             </div>
-            <div class="name">имя юзера</div>
+            <div class="chat__header__name">имя юзера</div>
         </div>
-        <div class="message-container">
+        <div class="chat__messages">
             <div class="my-message">
                 Привет
             </div>
@@ -24,9 +24,9 @@
                 Очень очень очень очень очень очень очень очень очень очень очень очень очень очень очень м оченьочень длинное сообщение
             </div>
         </div>
-        <div class="message-form">
+        <div class="chat__message-form">
             <label class="chat">
-                <textarea class="message-input"></textarea>
+                <textarea class="chat__message-form__input"></textarea>
             </label>
             <button class="send-message-button" type="button">Отправить</button>
         </div>
