--- a/src/views/user-list.html
+++ b/src/views/user-list.html
@@ -6,12 +6,13 @@
     <link rel="stylesheet" href="/team-4/src/public/user-list.css" media="screen">
 </head>
 <body>
+    <! -- Список контактов -->
     <article class="user-list">
         <div class="user-card">
-            <div class="avatar">
+            <div class="chat__header__avatar">
                 <img src="/team-4/src/public/avatar.jpg" class="image">
             </div>
-            <div class="name">
+            <div class="chat__header__name">
                 имя юзера
             </div>
         </div>
