--- a/src/public/user-list.css
+++ b/src/public/user-list.css
@@ -4,21 +4,20 @@
 }
 
 .user-card {
-    --card-height: 100px;
     width: 80%;
-    height: var(--card-height);
+    height: 100px;
     border-radius: 10px;
     background-color: #a0bbff;
 
     display: grid;
     grid-template:
-            "b a" 30px
-            "b c" 1fr / 20% 1fr;
+            "avatar user-name" 30px
+            "avatar info" 1fr / 20% 1fr;
 }
 
-.avatar {
-    width: calc(var(--card-height) - 10px);
-    height: calc(var(--card-height) - 10px);
+.chat__header__avatar {
+    width: 90px;
+    height: 90px;
     background: silver;
     overflow: hidden;
     margin: 5px;
@@ -26,20 +25,20 @@
     border-radius: 100px;
     align-self: flex-start;
 
-    grid-area: b;
+    grid-area: avatar;
 }
 
 .image {
-    width: var(--header-height);
-    height: var(--header-height);
+    width: 70px;
+    height: 70px;
 }
 
-.name {
+.chat__header__name {
     margin-left: 10px;
     display: flex;
     align-items: center;
 
     font-size: 20px;
 
-    grid-area: a;
+    grid-area: user-name;
 }
