--- a/src/views/user-list.html
+++ b/src/views/user-list.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="/team-4/src/public/user-list.css" media="screen">
-</head>
-<body>
+  </head>
+  <body>
     <! -- Список контактов -->
     <article class="user-list">
-        <div class="user-card">
-            <div class="chat__header__avatar">
-                <img src="/team-4/src/public/avatar.jpg" class="image">
-            </div>
-            <div class="chat__header__name">
-                имя юзера
-            </div>
+      <div class="user-card">
+        <div class="chat__header__avatar">
+          <img src="/team-4/src/public/avatar.jpg" class="image" alt="avatar">
         </div>
+        <div class="chat__header__name">
+          имя юзера
+        </div>
+      </div>
     </article>
-</body>
+  </body>
 </html>
