--- a/src/views/chat.html
+++ b/src/views/chat.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <title>Chat</title>
     <link rel="stylesheet" href="/team-4/src/public/chat.css" media="screen">
+    <link rel="stylesheet" href="/team-4/src/public/index.css" media="screen">
   </head>
   <body>
-    <article class="chat-modal">
+    <article class="chat-container">
       <div class="chat__header">
-        <div class="chat__header__avatar">
-          <img src="/team-4/src/public/avatar.jpg" class="image" alt="avatar">
+        <div class="chat__user-avatar">
+          <img src="/team-4/src/public/avatar.jpg" class="chat__avatar-image" alt="avatar">
         </div>
-        <div class="chat__header__name">имя юзера</div>
+        <div class="chat__username">имя юзера</div>
       </div>
       <div class="chat__messages">
         <div class="my-message">
