--- a/src/views/user-list.html
+++ b/src/views/user-list.html
@@ -2,19 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Контакты</title>
     <link rel="stylesheet" href="/team-4/src/public/user-list.css" media="screen">
+    <link rel="stylesheet" href="/team-4/src/public/index.css" media="screen">
   </head>
   <body>
-    <! -- Список контактов -->
+    <h2>Список контактов</h2>
     <article class="user-list">
       <div class="user-card">
-        <div class="chat__header__avatar">
-          <img src="/team-4/src/public/avatar.jpg" class="image" alt="avatar">
+        <div class="user-card__avatar">
+          <img src="/team-4/src/public/avatar.jpg" class="user-card__avatar-image" alt="avatar">
         </div>
-        <div class="chat__header__name">
-          имя юзера
+        <div class="user-card__name">имя юзера</div>
+      </div>
+      <div class="user-card">
+        <div class="user-card__avatar">
+          <img src="/team-4/src/public/avatar.jpg" class="user-card__avatar-image" alt="avatar">
         </div>
+        <div class="user-card__name">имя юзера 2</div>
+      </div>
+      <div class="user-card">
+        <div class="user-card__avatar">
+          <img src="/team-4/src/public/avatar.jpg" class="user-card__avatar-image" alt="avatar">
+        </div>
+        <div class="user-card__name">имя юзера 3</div>
       </div>
     </article>
   </body>
