--- a/src/public/chat.css
+++ b/src/public/chat.css
@@ -1,25 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
 
-html {
-  width: 100%;
-  height: 100%;
-}
-
-body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-}
-
-.chat-modal {
+.chat-container {
   display: grid;
   grid-template-rows: 1fr 5fr 1fr;
+
+  box-sizing: border-box;
 
   width: 80%;
   height: 80%;
   margin: auto;
 
-  border: dodgerblue solid 2px;
+  border: #1e90ff solid 2px;
   border-radius: 5px;
 }
 
@@ -59,7 +50,7 @@ body {
 
   border-radius: 3px;
 
-  background-color: white;
+  background-color: #ffffff;
   color: #081e5f;
 
   font-family: 'Roboto Condensed', sans-serif;
@@ -74,11 +65,13 @@ body {
 }
 
 .chat__message-form__input {
-  width: 99%;
-  height: 90%;
+  box-sizing: border-box;
+
+  width: 100%;
+  height: 100%;
   margin: 2px;
 
-  border: 0;
+  border: #000000 solid 1px;
 
   resize: none;
 }
@@ -97,7 +90,7 @@ body {
   margin: 5px;
 }
 
-.chat__header__avatar {
+.chat__user-avatar {
   overflow: hidden;
   align-self: flex-start;
 
@@ -107,19 +100,21 @@ body {
 
   border-radius: 100px;
 
-  background: silver;
+  background: #c0c0c0;
 }
 
-.image {
-  width: 70px;
-  height: 70px;
+.chat__avatar-image {
+  width: 100%;
+  height: 100%;
+
+  object-fit: cover;
 }
 
-.chat__header__name {
+.chat__username {
   display: flex;
   align-items: center;
 
   margin-left: 10px;
 
-  font-size: 20px;
+  font-size: 1.75em;
 }
