sending html files

--- a/src/views/chat.html
+++ b/src/views/chat.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <title>Chat</title>
-    <link rel="stylesheet" href="/team-4/src/public/chat.css" media="screen">
-    <link rel="stylesheet" href="/team-4/src/public/index.css" media="screen">
+    <link rel="stylesheet" href="/chat.css" media="screen">
+    <link rel="stylesheet" href="/index.css" media="screen">
   </head>
   <body>
     <article class="chat-container">
       <div class="chat__header">
         <div class="chat__user-avatar">
-          <img src="/team-4/src/public/avatar.jpg" class="chat__avatar-image" alt="avatar">
+          <img src="/avatar.jpg" class="chat__avatar-image" alt="avatar">
         </div>
         <div class="chat__username">имя юзера</div>
       </div>
