--- a/src/views/user-list.html
+++ b/src/views/user-list.html
@@ -3,27 +3,27 @@
   <head>
     <meta charset="UTF-8">
     <title>Контакты</title>
-    <link rel="stylesheet" href="/team-4/src/public/user-list.css" media="screen">
-    <link rel="stylesheet" href="/team-4/src/public/index.css" media="screen">
+    <link rel="stylesheet" href="/user-list.css" media="screen">
+    <link rel="stylesheet" href="/index.css" media="screen">
   </head>
   <body>
     <h2>Список контактов</h2>
     <article class="user-list">
       <div class="user-card">
         <div class="user-card__avatar">
-          <img src="/team-4/src/public/avatar.jpg" class="user-card__avatar-image" alt="avatar">
+          <img src="/avatar.jpg" class="user-card__avatar-image" alt="avatar">
         </div>
         <div class="user-card__name">имя юзера</div>
       </div>
       <div class="user-card">
         <div class="user-card__avatar">
-          <img src="/team-4/src/public/avatar.jpg" class="user-card__avatar-image" alt="avatar">
+          <img src="/avatar.jpg" class="user-card__avatar-image" alt="avatar">
         </div>
         <div class="user-card__name">имя юзера 2</div>
       </div>
       <div class="user-card">
         <div class="user-card__avatar">
-          <img src="/team-4/src/public/avatar.jpg" class="user-card__avatar-image" alt="avatar">
+          <img src="/avatar.jpg" class="user-card__avatar-image" alt="avatar">
         </div>
         <div class="user-card__name">имя юзера 3</div>
       </div>
