Fixed styles upload for hbs
Изменил в package.json папку, куда складываются стили, теперь всё должно нормально подключаться

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Контакты</title>
-    <link rel="stylesheet" href="/css/index.css" media="screen">
-    <link rel="stylesheet" href="/css/users-list.css" media="screen">
+    <link rel="stylesheet" href="/app.css" media="screen">
+    <link rel="stylesheet" href="/contacts/index.css" media="screen">
   </head>
   <body>
     <h2>Список контактов</h2>
