--- a/pages/app.css
+++ b/pages/app.css
@@ -1,10 +1,11 @@
-html {
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+
+html, body {
   width: 100%;
   height: 100%;
 }
 
-body {
-  width: 100%;
-  height: 100%;
+* {
   margin: 0;
+  padding: 0;
 }
