--- a/components/contacts/index.module.css
+++ b/components/contacts/index.module.css
@@ -1,36 +1,47 @@
 .userList {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.column {
+  margin: 0 10px;
 }
 
 .userCard {
-  display: grid;
-  grid-template:
-    'avatar user-name' 30px
-    'avatar info' 1fr / 20% 1fr;
+  display: flex;
+  align-items: center;
 
   width: 80%;
-  height: 100px;
+  min-width: 300px;
+  max-width: 500px;
+  min-height: 100px;
   margin: 10px;
+  padding: 10px 0;
 
   border-radius: 10px;
 
-  background-color: #a0bbff;
+  background-color: #dcf5e8;
+
+  -webkit-box-shadow: 4px 4px 4px 0 rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 4px 4px 4px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 4px 4px 4px 0 rgba(0, 0, 0, 0.1);
+
+  cursor: pointer;
 }
 
 .avatarContainer {
   overflow: hidden;
-  align-self: flex-start;
-  grid-area: avatar;
 
-  width: 90px;
-  height: 90px;
-  margin: 5px;
+  flex-shrink: 0;
 
-  border: #081e5f solid 1px;
-  border-radius: 100px;
+  width: 100px;
+  height: 100px;
 
-  background: #c0c0c0;
+  border-radius: 50%;
+
+  background: #d7d7d7;
 }
 
 .avatarImage {
@@ -40,12 +51,12 @@
   object-fit: cover;
 }
 
+.infoContainer {
+  flex-grow: 1;
+
+  word-break: break-all;
+}
+
 .userName {
-  display: flex;
-  align-items: center;
-  grid-area: user-name;
-
-  margin-left: 10px;
-
-  font-size: 20px;
+  font-size: 1.25em;
 }
