--- a/pages/app.css
+++ b/pages/app.css
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400&display=swap');
 
 html, body {
   width: 100%;
   height: 100%;
+  font-family: 'Lato', 'Roboto', sans-serif;
 }
 
 * {
