--- a/components/contacts/index.module.css
+++ b/components/contacts/index.module.css
@@ -1,8 +1,24 @@
+.wrapper {
+  display: flex;
+  justify-content: center;
+
+  height: 100%;
+}
+
+.info {
+  margin: auto;
+
+  font-size: 2rem;
+}
+
 .userList {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+
+  width: 80%;
+  min-width: 300px;
+  max-width: 500px;
 }
 
 .column {
@@ -13,9 +29,7 @@
   display: flex;
   align-items: center;
 
-  width: 80%;
-  min-width: 300px;
-  max-width: 500px;
+  width: 100%;
   min-height: 100px;
   margin: 10px;
   padding: 10px 0;
